# template-rust-service

./: Cargo.toml  Dockerfile  README.md  build-docker-image.sh
src/: app_error.rs  lib.rs  router.rs
src/api/: api_error.rs  health.rs  layer_error.rs  mod.rs  not_found.rs
src/logic/: health.rs  mod.rs
src/model/: health.rs
tests/: health_test.rs
tests/tools/: mod.rs  server.rs
