[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Barlog <barlog@tanelorn.li>"]
edition = "2021"

[dependencies]
backtrace = "0.3"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }

axum = "0.6"

tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert-json-diff = "2"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[[bin]]
name = "service"
test = false
bench = false
